MCA App/Release/MCA Dev Org/src/objects/Admin_Bank_Directory_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Account_Record_Type_Id__c</fullName>
        <label>Account Record Type Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Import_Job_Id__c</fullName>
        <label>Import Job Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduled_Service_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scheduled Service Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scheduled_Service_Job_Id__c</fullName>
        <label>Scheduled Service Job Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Admin Bank Directory Settings</label>
</CustomObject>